fixed background overflow added custom scrolbar for table, generated dummy data for line chart

--- a/src/index.css
+++ b/src/index.css
@@ -17,16 +17,46 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+/* Slider section background position adjustment */
+.alignSlider {
+  background-position-y: 75%;
+}
+
+/* Custom scroll bar and Table styles */
+tbody {
+  display: block;
+  overflow-y: auto;
+  max-height: 20rem;
+}
+
+thead,
+tbody tr {
+  display: table;
+  width: 100%;
+}
+.custom-scrollbar {
+  padding-right: 12px; 
+}
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #2346b9;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #2b58ec;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #E5F1F3;
+  border-radius: 10px;
+}
 
 /* swiper js custom CSS */
-
-/* .swiper .res-slide {
-  min-width: 300px;
-  max-width: 670px;
-  min-height: 326px;
-  border-radius: 10px;
-} */
-
 .swiper .res-slide {
   min-width: 300px;
   max-width: 670px;
@@ -35,8 +65,6 @@
 }
 
 .swiper-nav-btns button {
-  width: 56px;
-  height: 56px;
   transition: all 0.5s;
 }
 
@@ -86,3 +114,9 @@
     border-radius: 10px;
   }
 }
+
+
+
+
+
+
